finished the js and updated css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Dogs Image Fetcher</h1>
 
     <div id="imageContainer">
         <img src="" alt="dog image" id="dogImage">
